src/test/deca/context/invalid/23_ImpossibleCast.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 13: ContextualError: impossible cast
// 
// Historique:
//    cree le 01/01/2022

{
   float a = 1.0;
   // Doit etre refuse.
   boolean b = (boolean)(a);
}
